# ai_news_letter

./: .dockerignore  .env  Dockerfile  README.md  fly.smtp-relay.toml  fly.toml  mcp_app.py  pyproject.toml  render.yaml  requirements.txt  test_chat.py  test_mcp.py  test_newsletter_flow.py
app/: agent.py  main.py  mcp_server.py
app/config/: settings.py
app/routes/: chat.py  mcp.py  news.py
app/services/: api_tools.py  email_sender.py  fetch_news_GNEWS.py  fetch_news_NewsData.py  newsletter_render.py  vercel_deploy.py
app/templates/: newsletter.html.j2
app/utils/: filters.py
