[project]
name = "ai-newsletter"
version = "0.1.0"
description = "An app to get all the ai news and send it to the user"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
]
